--- a/src/index.css
+++ b/src/index.css
@@ -80,9 +80,13 @@ textarea {
 
 @keyframes rightFloatIn {
   from {
+    scale: 0.8;
+    opacity: 0.5;
     transform: translateX(30px);
   }
   to {
+    opacity: 1;
+    scale: 1;
     transform: translateX(0px);
   }
 }
